--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ember-data": "1.13.8",
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.3",
+    "ember-multiselect-checkboxes": "0.8.0",
     "ember-simple-auth": "1.0.1"
   }
 }
